# atos-de-fala

./: .gitignore  README.md  SCHEMA.md  index.md  log.md  pyproject.toml
config/: rubric.md  taxonomy.yaml
db/: schema.sql
docs/colab/: train_bertimbau_lora.md
docs/remote/: train_tailscale.md
gold/: README.md
raw/sources/: 2026-05-02-building-slm-from-scratch-transcript.md  2026-05-02-building-slm-from-scratch.md  2026-05-02-openai-privacy-filter.md
scripts/: build_collected_gold.py  compare_onnx.py  export_onnx.py  extract_consumidor_gov.py  gen_honeypots.py  merge_model.py  scrub_pii.py
space/: README.md  app.py  requirements.txt  taxonomy.yaml
space/adapter/: README.md  adapter_config.json  adapter_model.safetensors  (+1 more)
tests/: test_agreement.py  test_annotate.py  test_balance.py  test_bioes.py  test_claude.py  test_cli_concurrency.py  test_cli_smoke.py  test_collect_aggregate.py  test_collect_cli.py  test_collect_confirm.py  test_collect_export_spans.py  test_collect_models.py  test_collect_perception.py  test_collect_prioritize.py  test_collect_score.py  test_collect_select.py  test_dataset.py  test_decode.py  test_deepseek.py  test_eval.py  test_eval_cli.py  test_fapesp.py  test_features.py  test_gold.py  test_minimax.py  test_model_smoke.py  test_multidomain.py  test_pipeline.py  test_pipeline_gen.py  test_porttinari.py  test_prompts.py  test_resolve.py  test_schema.py  test_stats.py  test_taxonomy.py  test_train_data.py  test_train_smoke.py  test_validator.py  test_worksheet.py
web/: README.md  package-lock.json  package.json
wiki/: overview.md
(+176 files in other folders)
