[project]
name = "chomsky"
version = "0.1.0"
description = "Span-level speech-act classification for PT-BR"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gen = ["requests>=2.31"]
collect = ["psycopg[binary]>=3.1,<4"]
ml = [
    "torch>=2.2",
    "transformers>=4.44,<5",  # 5.x changed fast-tokenizer/API; our code targets 4.x (wiki: API churn)
    "peft>=0.11,<0.15",
    "sentencepiece>=0.2",     # required to build fast tokenizers
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
